--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="str_work_contacts_fragment">Work</string>
     <string name="str_call_logs_fragment">Call Logs</string>
 
+    <!-- Settings -->
+    <string name="about">About</string>
+    <string name="about_summary">About Zname</string>
+    <string name="feedback">Feedback</string>
+    <string name="feedback_summary">Send Feedback</string>
 </resources>
