--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,13 +3,12 @@
     <string-array name="planets_array">
         <item>Edit Profile</item>
         <item>Settings</item>
-<!--         <item>Gallery</item> -->
-<!--         <item>Temple</item> -->
-<!--         <item>History</item> -->
-<!--         <item>Management</item> -->
-<!--         <item>Contact Us</item> -->
+        <!-- <item>Gallery</item> -->
+        <!-- <item>Temple</item> -->
+        <!-- <item>History</item> -->
+        <!-- <item>Management</item> -->
+        <!-- <item>Contact Us</item> -->
     </string-array>
-    
     <string-array name="call_logs_array">
         <item>All</item>
         <item>Missed Calls</item>
@@ -17,11 +16,11 @@
         <item>Incoming Calls</item>
         <item>Select a date</item>
     </string-array>
-    
+
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    
-    <!--Intro view-->
+
+    <!-- Intro view -->
     <string name="Page1Title">Zname</string>
     <string name="Page2Title">Place</string>
     <string name="Page3Title">Share</string>
@@ -36,10 +35,9 @@
     <string name="Page5Message"><![CDATA[<b>Check</b>]]> activity feeds of ur friends &amp; do much more.<![CDATA[<br/>]]>Hop in to check out more...!</string>
     <string name="Page6Message"><![CDATA[<b>Classes</b>]]> lets you access your messages<![CDATA[<br/>]]>from multiple devices</string>
     <string name="Page7Message"><![CDATA[<b>Classes</b>]]> messages are heavily encrypted<![CDATA[<br/>]]>and can self-destruct</string>
-    
+
     <!-- Sign Up -->
     <string name="SignUpAgree"><![CDATA[<b>By signing up</b>]]> I agree to the <![CDATA[<br/>]]>Zname Terms of Use.</string>
-    
     <string name="app_name">Zname</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">ABS ViewPager Tabs Tutorial</string>
@@ -49,9 +47,20 @@
     <string name="str_work_contacts_fragment">Work</string>
     <string name="str_call_logs_fragment">Call Logs</string>
 
+    <!-- Profile User -->
+    <string name="str_profile_status_work">Work</string>
+    <string name="str_profile_status_read">Read</string>
+    <string name="str_profile_status_place">Place</string>
+    <string name="str_profile_status_random">Random</string>
+    <string name="str_profile_status_work_hint">I\'m working on...</string>
+    <string name="str_profile_status_read_hint">I\'m reading...</string>
+    <string name="str_profile_status_place_hint">I\'m @</string>
+    <string name="str_profile_status_random_hint">Random thought...</string>
+
     <!-- Settings -->
     <string name="about">About</string>
     <string name="about_summary">About Zname</string>
     <string name="feedback">Feedback</string>
     <string name="feedback_summary">Send Feedback</string>
+
 </resources>
