--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,11 +48,11 @@
     <string name="str_call_logs_fragment">Call Logs</string>
 
     <!-- Profile User -->
-    <string name="str_profile_status_work">Work</string>
+    <string name="str_profile_status_work">Watch</string>
     <string name="str_profile_status_read">Read</string>
     <string name="str_profile_status_place">Place</string>
     <string name="str_profile_status_random">Random</string>
-    <string name="str_profile_status_work_hint">I\'m working on...</string>
+    <string name="str_profile_status_work_hint">I\'m watchin...</string>
     <string name="str_profile_status_read_hint">I\'m reading...</string>
     <string name="str_profile_status_place_hint">I\'m @</string>
     <string name="str_profile_status_random_hint">Random thought...</string>
