--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,4 +67,6 @@
     <string name="feedback">Feedback</string>
     <string name="feedback_summary">Send Feedback</string>
 
+    <!-- Contact Picker -->
+    <string name="search_hint">Search</string>
 </resources>
