1. + Hide add group button onScroll(Groups). 2. + Show selected menu in CallLog(Best feature). 3. + Sign In. (Checking username available or not only).

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,6 +47,14 @@
     <string name="str_work_contacts_fragment">Work</string>
     <string name="str_call_logs_fragment">Call Logs</string>
 
+
+    <!-- Sign In -->
+    <string name="str_sign_head">Please enter your valid z:name</string>
+    <string name="str_sign_verify">Verification code will be sent to associated z:number with these z:name</string>
+    
+    <!-- Group -->
+    <string name="str_add_member">Add members</string>
+    
     <!-- Profile User -->
     <string name="str_profile_status_work">Watch</string>
     <string name="str_profile_status_read">Read</string>
